--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,9 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- gloss
+- safe
+- yjtools
 
 library:
   source-dirs: src
@@ -46,3 +49,5 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - haskell-go
+    - hspec
+    - QuickCheck
