--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                haskell-go
 version:             0.1.0.0
-github:              "githubuser/haskell-go"
+github:              "willGuimont/haskell-go"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2019 Author name here"
+author:              "willGuimont"
+maintainer:          "willGuimont"
+copyright:           "2019 willGuimont"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/haskell-go#readme>
+description:         Please see the README on GitHub at <https://github.com/willGuimont/haskell-go#readme>
 
 dependencies:
 - base >= 4.7 && < 5
